# c2pa-public-dataset

./: README.md  c2pa-manifests.md  ethical-guidelines.md  license.md  pyproject.toml
sample/: AIML-training-dataset-hierarchical.cddl  dataset_demo_assertions.json
sample/evaluation/: Metaphysic_C2PA_evaluation_partition_dataset.json
sample/test/: Metaphysic_C2PA_test_partition_dataset.json
sample/training/: Metaphysic_C2PA_training_partition_dataset.json
src/: sign_dataset.py
src/extract/: c2pa_extract.py
src/sign/: c2pa_sign.py
