[tool.poetry]
name = "c2pa-demo"
version = "0.1.0"
description = ""
authors = ["Germano Gustavo Gesser <germano@metaphysic.ai>"]
readme = "README.md"
packages = [{include = "c2pa_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
c2pa-python = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
